--- a/form/03-article.html
+++ b/form/03-article.html
@@ -184,7 +184,7 @@
                   </div>
                 </div>
                 <div class="form-group">
-                  <button class="button button-primary">Post My Comment</button>
+                  <button class="button button-primary">Post my comment</button>
                 </div>
               </fieldset>
             </form>
