Modified pagination to start at 1.

--- a/JQuery_advanced/8-index.html
+++ b/JQuery_advanced/8-index.html
@@ -25,7 +25,7 @@
 
       for (let i = 0; i < (numberOfItems / itemsPerPage); i++) {
         $( "ul#pagination" ).append(
-          $( "<li>" ).text( i )
+          $( "<li>" ).text( i + 1 )
             .css("cursor", "pointer")
             .css("margin-left", "10px")
             .on( "click", function() {
