Change how to access the element on the click event to be compatible with firefox and chrome.

--- a/Cookies_local_storage/5-index.html
+++ b/Cookies_local_storage/5-index.html
@@ -35,7 +35,7 @@
             listEl.setAttribute("style", "cursor: pointer");
 
             listEl.addEventListener("click", e => {
-              const valueItem = e.originalTarget.textContent;
+              const valueItem = e.srcElement.textContent;
               addItemToCart(valueItem);
             })
 
